--- a/css/about.css
+++ b/css/about.css
@@ -70,7 +70,9 @@ p {
     width: 800px;
     margin: 0 auto;
 }
-/* Styling header and Hero Image */
+
+/* Styling header and hero image */
+
 header {
     margin: 5% 0;
     display: flex;
@@ -94,102 +96,9 @@ nav a {
     margin: 3% 0;
 }
 
-.top-content {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    margin-bottom: 20px;
-    border-bottom: 1px dashed black;
-}
 
-.top-content .text-container {
-    width: 48%;
-    padding: 0 1%;
-    padding-bottom: 20px;  
-}
 
-.middle-content {
-    margin-bottom: 20px;
-    border-bottom: 1px dashed black;
-}
-
-.middle-content h2 {
-    padding: 0 2%;
-    margin-bottom: 0;
-}
-
-.middle-content .boxes {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-}
-
-.middle-content .boxes .box {
-    width: 12.5%;
-    height: 100px;
-    background: black;
-    margin: 20px 2.5%;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-/* Coloring boxes */
-.middle-content .boxes .box.one {
-    background: teal;
-}
-
-.middle-content .boxes .box.two {
-    background: gold;
-} 
-
-.middle-content .boxes .box.three {
-    background: cadetblue;
-} 
-
-.middle-content .boxes .box.four {
-    background: coral;
-}
-
-.middle-content .boxes .box.five {
-    background: crimson;
-}
-
-.middle-content .boxes .box.six {
-    background: forestgreen;
-}
-
-.middle-content .boxes .box.seven {
-    background: darkorchid;
-}
-
-.middle-content .boxes .box.eight {
-    background: hotpink;
-}
-
-.middle-content .boxes .box.nine {
-    background: indigo;
-}
-
-.middle-content .boxes .box.ten {
-    background: dodgerblue;
-}
-
-.bottom-content {
-    display: flex;
-    margin: 0 2% 20px;
-    justify-content: space-around;
-}
-
-.bottom-content .text-container {
-    padding-right: 4%;
-}
-
-.bottom-content .text-container:last-child {
-    padding-right: 0;
-}
-
+/* Footer */
 footer {
     width: 100%;
     background: black;
